--- a/src/css/common.css
+++ b/src/css/common.css
@@ -59,7 +59,8 @@ li {
 
 i,
 em,
-address {
+address,
+cite {
   font-style: inherit;
 }
 
@@ -121,9 +122,9 @@ q:after {
   font-style: normal;
 }
 @font-face {
-  font-family: "GmarketSansMedium";
-  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff") format("woff");
-  font-weight: normal;
+  font-family: "HallymGothic-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2204@1.0/HallymGothic-Regular.woff2") format("woff2");
+  font-weight: 400;
   font-style: normal;
 }
 .hide {
@@ -131,7 +132,7 @@ q:after {
 }
 
 body {
-  font-family: "yleeMortalHeartImmortalMemory";
+  font-family: "HallymGothic-Regular";
   color: #010326;
 }
 
@@ -142,9 +143,16 @@ h4 {
   font-family: "MaplestoryOTFBold";
 }
 
+.App {
+  background-color: #f2f2f2;
+}
+
 .header {
   width: 100%;
-  padding: 1em;
+  height: 5em;
+  padding: 0 3em;
+  background-color: #f2f2f2;
+  border-bottom: 2px double #010326;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
@@ -153,9 +161,11 @@ h4 {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 20;
 }
 .header nav {
   flex-basis: 40%;
+  min-width: 18.75em;
 }
 .header ul {
   display: flex;
@@ -163,17 +173,36 @@ h4 {
   align-items: center;
   flex-wrap: nowrap;
   font-size: 1.5em;
-  color: #0528f2;
+  color: #010326;
+  font-family: "yleeMortalHeartImmortalMemory";
 }
 
 main {
-  height: 1vh;
+  height: 90vh;
+  padding: 0 0.5em 0;
+  box-sizing: border-box;
+}
+
+footer {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  background: #010326;
+  color: #f2f2f2;
+  font-family: "yleeMortalHeartImmortalMemory";
+  font-size: 1.2em;
+  text-align: center;
 }
 
 .Card {
   height: 100vh;
   position: relative;
   font-size: 1.25em;
+  font-family: "yleeMortalHeartImmortalMemory";
+  z-index: 10;
 }
 .Card::after {
   content: "";
@@ -330,7 +359,8 @@ li {
 
 i,
 em,
-address {
+address,
+cite {
   font-style: inherit;
 }
 
@@ -380,7 +410,76 @@ q:after {
 }
 
 .Introduce {
-  height: 100vh;
+  height: 100%;
+  padding: 6em 0 1em;
+  box-sizing: border-box;
+  overflow: hidden;
+  position: relative;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-wrap: nowrap;
+}
+.Introduce .imgWrapper {
+  flex-basis: 40%;
+  margin: 0 1em;
+  border: 2px double #010326;
+  box-sizing: border-box;
+  background: url("../assets/사진.jpg") no-repeat center center/cover;
+}
+.Introduce .descWrapper {
+  flex-basis: 40%;
+  margin: 0 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+.Introduce .descWrapper blockquote {
+  padding: 1em;
+  border: 2px double #010326;
+  box-sizing: border-box;
+  flex-basis: 30%;
+  background: url("../assets/grass.png") no-repeat right 10% top 20%/50px;
+}
+.Introduce .descWrapper blockquote p {
+  font-size: 1em;
+  line-height: 1.7;
+}
+.Introduce .descWrapper blockquote cite {
+  margin-top: 1em;
+  font-size: 1em;
+  display: block;
+  font-family: "yleeMortalHeartImmortalMemory";
+  text-align: right;
+}
+.Introduce .descWrapper blockquote cite::after, .Introduce .descWrapper blockquote cite::before {
+  content: " - ";
+}
+.Introduce .descWrapper .descTitle {
+  flex-basis: 60%;
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  text-align: left;
+  box-sizing: border-box;
+  border: 2px double #010326;
+}
+.Introduce .descWrapper .descTitle h3 {
+  font-size: 1.25em;
+  margin-bottom: 1em;
+}
+.Introduce .descWrapper .descTitle h3::after, .Introduce .descWrapper .descTitle h3:before {
+  content: '"';
+}
+.Introduce .descWrapper .descTitle p {
+  margin: 0.2em 0;
+  line-height: 1.5;
 }
 
 /*# sourceMappingURL=common.css.map */
