--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -1,23 +1,45 @@
 @charset "utf-8";
-
+.App {
+  background-color: $white;
+}
 .header {
   width: 100%;
-  padding: 1em;
+  height: 5em;
+  padding: 0 3em;
+  background-color: $white;
+  border-bottom: 2px double $black;
   box-sizing: border-box;
   @include flex($a: center);
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 20;
   nav {
     flex-basis: 40%;
+    //300px
+    min-width: 18.75em;
   }
   ul {
     @include flex($a: center);
     font-size: 1.5em;
-    color: nth($blue, 3);
+    color: $black;
+    font-family: $fontMemories;
   }
 }
 
 main {
-  height: 1vh;
+  height: 90vh;
+  padding: 0 0.5em 0;
+  box-sizing: border-box;
+}
+
+footer {
+  width: 100%;
+  height: 10vh;
+  @include flex($a: center, $j: center);
+  background: $black;
+  color: $white;
+  font-family: $fontMemories;
+  font-size: 1.2em;
+  text-align: center;
 }
