--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -4,6 +4,8 @@
   height: 100vh;
   position: relative;
   font-size: 1.25em;
+  font-family: $fontMemories;
+  z-index: 10;
   &::after {
     content: "";
     width: 100%;
