--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -14,6 +14,11 @@
   top: 0;
   left: 0;
   z-index: 20;
+  h1 {
+    img {
+      height: 4em;
+    }
+  }
   nav {
     flex-basis: 40%;
     //300px
@@ -24,6 +29,9 @@
     font-size: 1.5em;
     color: $black;
     font-family: $fontMemories;
+    li:hover {
+      color: nth($blue, 3);
+    }
   }
 }
 
