--- a/src/scss/_skill.scss
+++ b/src/scss/_skill.scss
@@ -12,26 +12,38 @@
     width: 90%;
     margin: 1em auto 0;
     border: 2px double $black;
+    box-sizing: border-box;
     button {
-      width: 32%;
       margin: 0 1em;
     }
     @include flex($a: center);
     img {
       width: 100%;
-      &.reactImg {
-        max-width: 49%;
-      }
     }
   }
 
   .skillDesc {
     width: 90%;
     margin: 1em auto 0;
+    padding: 1em;
+    position: relative;
+    box-sizing: border-box;
+    border: 7px solid burlywood;
+    background-color: #2c3e36;
     p {
-      margin: 0.2em 0;
+      margin: 0.5em 0;
+      color: $white;
       &::before {
         content: " - ";
+      }
+      &::after {
+        content: "";
+        width: 3.125em;
+        height: 0.625em;
+        background-color: $white;
+        position: absolute;
+        right: 30%;
+        bottom: 0;
       }
     }
   }
