--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -66,7 +66,7 @@ h4 {
   height: 100%;
   padding: 6em 0 1em;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: scroll;
   position: relative;
   z-index: 10;
 }
