--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,3 +1,4 @@
+@charset "utf-8";
 @import "reset";
 
 //추억은 잠들지 않는다체
@@ -74,4 +75,4 @@ h4 {
     text-align: center;
   }
 }
-@import "app", "card", "introduce", "skill", "project";
+@import "app", "card", "introduce", "skill", "project", "experience";
