--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -1,53 +1,45 @@
 @charset "utf-8";
-.App {
-  background-color: $white;
-}
 .header {
   width: 100%;
-  height: 5em;
-  padding: 0 3em;
-  background-color: $white;
-  border-bottom: 2px double $black;
-  box-sizing: border-box;
+  padding: 0.2em 6em;
   @include flex($a: center);
   position: fixed;
   top: 0;
   left: 0;
+  box-sizing: border-box;
   z-index: 20;
+  border-bottom: 2px double $black;
+  background-color: $white;
   h1 {
+    @include flex($a: center);
     img {
       height: 4em;
     }
   }
   nav {
-    flex-basis: 40%;
+    flex-basis: 45%;
     //300px
     min-width: 18.75em;
   }
   ul {
     @include flex($a: center);
     font-size: 1.5em;
-    color: $black;
     font-family: $fontMemories;
     li:hover {
-      color: nth($blue, 3);
+      color: $yellow;
     }
   }
 }
 
 main {
-  height: 90vh;
-  padding: 0 0.5em 0;
-  box-sizing: border-box;
+  min-height: 95vh;
 }
 
 footer {
-  width: 100%;
-  height: 10vh;
+  height: 5vh;
   @include flex($a: center, $j: center);
-  background: $black;
-  color: $white;
-  font-family: $fontMemories;
   font-size: 1.2em;
-  text-align: center;
+  font-family: $fontMemories;
+  color: $white;
+  background: $black;
 }
