--- a/src/scss/_introduce.scss
+++ b/src/scss/_introduce.scss
@@ -1,35 +1,32 @@
 @charset "utf-8";
 
 .Introduce {
-  @include flex($j: center);
+  @include flex($j: space-around);
   .imgWrapper {
-    flex-basis: 40%;
-    margin: 0 1em;
+    width: 30%;
+    min-height: 80vh;
     border: 2px double $black;
-    box-sizing: border-box;
     background: url("../assets/사진.jpg") no-repeat center center/cover;
   }
   .descWrapper {
-    flex-basis: 40%;
-    margin: 0 1em;
-    @include flex();
+    width: 50%;
+    @include flex;
     flex-direction: column;
     blockquote {
       padding: 1em;
       border: 2px double $black;
       box-sizing: border-box;
-      flex-basis: 30%;
       background: url("../assets/grass.png") no-repeat right 10% top 20%/50px;
       p {
-        font-size: 1em;
+        font-size: 0.9em;
         line-height: 1.7;
       }
       cite {
         margin-top: 1em;
-        font-size: 1em;
+        font-size: 0.9em;
         display: block;
-        font-family: $fontMemories;
         text-align: right;
+        font-family: $fontMemories;
         &::after,
         &::before {
           content: " - ";
@@ -37,16 +34,16 @@
       }
     }
     .descTitle {
-      flex-basis: 60%;
+      flex-grow: 1;
+      margin-top: 1em;
       padding: 1em;
-      @include flex($a: start, $j: center);
+      @include flex($j: center);
       flex-direction: column;
-      text-align: left;
       box-sizing: border-box;
       border: 2px double $black;
       h3 {
         font-size: 1.25em;
-        margin-bottom: 1em;
+        margin-bottom: 0.4em;
         &::after,
         &:before {
           content: "\0022";
@@ -54,7 +51,7 @@
       }
       p {
         margin: 0.2em 0;
-        line-height: 1.5;
+        line-height: 1.35;
       }
     }
   }
