--- a/src/scss/_App.scss
+++ b/src/scss/_App.scss
@@ -1,4 +1,12 @@
 @charset "utf-8";
+html,
+body {
+  height: 100%;
+}
+#root,
+.App {
+  height: 100%;
+}
 .header {
   width: 100%;
   padding: 0.2em 6em;
@@ -32,11 +40,11 @@
 }
 
 main {
-  min-height: 95vh;
+  height: 95%;
 }
 
 footer {
-  height: 5vh;
+  height: 5%;
   @include flex($a: center, $j: center);
   font-size: 1.2em;
   font-family: $fontMemories;
