--- a/src/scss/_introduce.scss
+++ b/src/scss/_introduce.scss
@@ -1,29 +1,81 @@
 @charset "utf-8";
 
 .Introduce {
-  @include flex($j: space-around);
-  .imgWrapper {
-    width: 30%;
-    min-height: 80vh;
-    border: 2px double $black;
-    background: url("../assets/사진.jpg") no-repeat center center/cover;
-  }
-  .descWrapper {
-    width: 50%;
+  width: 90%;
+  margin: 0 auto;
+  .introWapper {
+    width: 100%;
+    margin-bottom: 1em;
     @include flex;
-    flex-direction: column;
+    .imgWrapper {
+      width: 30%;
+      margin-right: 1em;
+      border: 2px double $black;
+      background: url("../assets/introduce/사진.jpg") no-repeat center
+        center/cover;
+    }
+    .descTitle {
+      padding: 1em;
+      @include flex($j: center);
+      flex-direction: column;
+      box-sizing: border-box;
+      border: 2px double $black;
+      h3 {
+        font-size: 1.25em;
+        margin-bottom: 0.4em;
+        color: $yellow;
+        &::after,
+        &:before {
+          content: "\0022";
+        }
+      }
+      p {
+        margin: 0.2em 0;
+        line-height: 1.3;
+        word-break: keep-all;
+      }
+      li {
+        margin-top: 0.5em;
+        p:nth-child(1) {
+          font-family: $title;
+        }
+        p:nth-child(1):before {
+          content: " 💡 ";
+          color: $yellow;
+        }
+      }
+    }
+  }
+  .wiseWapper {
+    @include flex;
     blockquote {
+      width: 70%;
       padding: 1em;
       border: 2px double $black;
       box-sizing: border-box;
-      background: url("../assets/grass.png") no-repeat right 10% top 20%/50px;
+      background: url("../assets/introduce/grass.png") no-repeat right 8% top
+        10%/3.125em;
       p {
-        font-size: 0.9em;
-        line-height: 1.7;
+        font-size: 1em;
+        line-height: 1.5;
+        strong {
+          position: relative;
+        }
+        strong::before {
+          width: 100%;
+          height: 5px;
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          content: "";
+          opacity: 0.5;
+          border-radius: 10px;
+          background-color: $yellow;
+        }
       }
       cite {
-        margin-top: 1em;
-        font-size: 0.9em;
+        margin-top: 0.7em;
+        font-size: 1em;
         display: block;
         text-align: right;
         font-family: $fontMemories;
@@ -33,26 +85,11 @@
         }
       }
     }
-    .descTitle {
-      flex-grow: 1;
-      margin-top: 1em;
-      padding: 1em;
-      @include flex($j: center);
-      flex-direction: column;
-      box-sizing: border-box;
+    div {
+      width: 25%;
       border: 2px double $black;
-      h3 {
-        font-size: 1.25em;
-        margin-bottom: 0.4em;
-        &::after,
-        &:before {
-          content: "\0022";
-        }
-      }
-      p {
-        margin: 0.2em 0;
-        line-height: 1.35;
-      }
+      background: url(../assets/introduce/introImg.png) center center/contain
+        no-repeat;
     }
   }
 }
