--- a/src/scss/_project.scss
+++ b/src/scss/_project.scss
@@ -1,22 +1,25 @@
 @charset "utf-8";
 
 .Project {
+  position: relative;
+  overflow: hidden;
   .buttonWrapper {
     width: 75%;
     min-height: 25em;
-    margin: 0 auto;
+    margin: 1em auto 0;
+    @include flex($a: center);
     position: relative;
+    z-index: 10;
   }
   .projectWrapper {
-    width: 85%;
-    height: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: 92%;
+    min-height: 20em;
+    margin: 0 auto;
+    position: relative;
     border-radius: 10px;
     border: 4px double $black;
     overflow: hidden;
+    background-color: $white;
     .projectSlide {
       width: 200%;
       position: absolute;
@@ -24,7 +27,6 @@
       left: 0;
       transition: 0.5s all;
       @include flex($w: wrap);
-      z-index: 10;
       .projectItem {
         width: 50%;
         height: 50%;
@@ -32,11 +34,28 @@
         padding: 1em;
         box-sizing: border-box;
         font-size: 0.875em;
-        h4 {
-          font-size: 1.3em;
-          margin-bottom: 1em;
-          text-align: center;
+        header {
+          position: relative;
+          h4 {
+            font-size: 1.3em;
+            margin-bottom: 1em;
+            text-align: center;
+          }
+          ul {
+            @include flex($a: center, $j: flex-end);
+            position: absolute;
+            top: 0;
+            right: 0;
+            li {
+              margin-right: 1em;
+              svg {
+                width: 2em;
+                height: 2em;
+              }
+            }
+          }
         }
+
         .flexWrapper {
           @include flex($a: start, $j: center);
           flex-direction: column;
@@ -71,12 +90,12 @@
         .simpleDesc {
           width: 100%;
           padding: 0.6em 0;
-          margin-bottom: 0.4em;
+          margin-bottom: 1.5em;
           text-align: center;
           box-sizing: border-box;
           border-radius: 10px;
-          color: nth($blue, 2);
-          background-color: gainsboro;
+          color: $white;
+          background-color: $black;
         }
 
         .skillStack {
@@ -85,25 +104,11 @@
             margin-right: 5px;
           }
         }
-
-        .screen {
-          width: 100%;
-          height: 100%;
-          position: absolute;
-          top: 0;
-          left: 0;
-          z-index: 20;
-          transition: 0.3s all;
-          &:hover {
-            opacity: 0;
-          }
-        }
       }
     }
   }
 
   .projectBtn {
-    padding: 1em;
     position: absolute;
     z-index: 100;
     img {
@@ -111,24 +116,38 @@
       height: 2.5em;
     }
     &.top {
-      top: -1em;
+      top: 0;
       left: 50%;
       transform: translateX(-50%) rotate(90deg);
     }
     &.bottom {
-      bottom: -1em;
+      bottom: 0;
       left: 50%;
       transform: translateX(-50%) rotate(-90deg);
     }
     &.left {
       top: 50%;
-      left: 1.3em;
+      left: 0;
       transform: translateY(-50%);
     }
     &.right {
       top: 50%;
-      right: 1.3em;
+      right: 0;
       transform: translateY(-50%) rotate(-180deg);
     }
+  }
+  .notionLink {
+    width: 70%;
+    margin: 0 auto;
+    color: nth($blue, 2);
+  }
+  .bg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0.5;
+    z-index: -10;
   }
 }
