--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -65,16 +65,6 @@ h4 {
   font-family: $title;
 }
 
-.container {
-  height: 100%;
-  padding: 6em 0 1em;
-  box-sizing: border-box;
-  overflow: scroll;
-  position: relative;
-  z-index: 10;
-  h2 {
-    font-size: 1.25em;
-    text-align: center;
-  }
-}
-@import "app", "card", "introduce", "skill", "project", "experience";
+@import "app", "header", "footer";
+
+@import "card", "introduce", "skill", "project", "experience";
